# FV-RTOS

./: Cargo.toml  README.md
rp-hal/rp235x-hal/src/: adc.rs  multicore.rs  prelude.rs
rp-hal/rp235x-hal/src/dma/: double_buffer.rs  single_buffer.rs
rp-hal/rp235x-hal/src/pwm/: mod.rs
rp-hal/rp235x-hal/src/uart/: pins.rs  reader.rs  utils.rs  writer.rs
rtos/: Cargo.toml  build.rs
rtos/src/: board.rs  main.rs
rtos_core/: Cargo.toml  build.rs  cbindgen.toml
rtos_core/src/: alarms.rs  lib.rs
tasks/: cstdint.h  rtos_core.h  task1.c  task1.h
