[package]
edition = "2024"
name = "rtos"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# We're using a Pico 2 by default on this template
#rp-pico2 = "0.9" # TODO: Do we have that crate already ?

# If you're not going to use a Board Support Package you'll need these:
rtos_core = { path = "../rtos_core" }
rp235x-hal = { path= "../rp-hal/rp235x-hal", features = [
    "rt",
    "critical-section-impl",
    "binary-info",
] }

[build-dependencies]
cc = "1"
